<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/what_activity_do_you_want_to_keep_track_of"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/time_til_hours"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/activity_name"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/ic_add_title"
        android:layout_below="@id/textView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/time_et_hours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/time_til_minutes"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/describe_the_activity"
        app:counterEnabled="true"
        app:counterMaxLength="48"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/ic_add_description"
        android:layout_below="@id/time_til_hours">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/time_et_minutes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/time_til_minutes"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/time_b_cancel"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/tt_cancel"
            android:text="@string/cancel"
            android:textAllCaps="false"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/time_b_accept"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:backgroundTint="@color/tt_accept"
            android:text="@string/add"
            android:textAllCaps="false" />


    </LinearLayout>



</RelativeLayout>